<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/car_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/label_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toEndOf="@+id/img_star"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toEndOf="@+id/img_city"
        app:layout_constraintTop_toBottomOf="@+id/label_fullname" />

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/img_desc_star_face"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent=".3"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@drawable/star_face" />

    <TextView
        android:id="@+id/lable_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/gender_male"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gender_icon"
        app:layout_constraintTop_toBottomOf="@+id/label_city"
        app:layout_constraintVertical_bias="0.115" />

    <TextView
        android:id="@+id/item_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="0dp"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lable_gender"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/gender_icon"
        android:layout_width="22dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/gender_icon"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toEndOf="@+id/img_star"
        app:layout_constraintTop_toBottomOf="@+id/label_city"
        app:layout_constraintVertical_bias="0.468"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:srcCompat="@drawable/male" />

    <ImageView
        android:id="@+id/img_city"
        android:layout_width="22dp"
        android:layout_height="19dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/gender_icon"
        app:layout_constraintBottom_toTopOf="@+id/gender_icon"
        app:layout_constraintRight_toLeftOf="@+id/label_city"
        app:layout_constraintStart_toEndOf="@+id/img_star"
        app:layout_constraintTop_toBottomOf="@+id/label_fullname"
        app:layout_constraintVertical_bias="0.468"
        app:srcCompat="@android:drawable/btn_star_big_on"
        tools:srcCompat="@drawable/location" />

</androidx.constraintlayout.widget.ConstraintLayout>